k8s/platform/event-bus/overlays/dev/nats-depl.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: nats-depl
spec:
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          args:
            - --config
            - /etc/nats-config/nats.conf
          volumeMounts:
            - name: config
              mountPath: /etc/nats-config
            - name: nats-storage
              mountPath: /data

      volumes:
        - name: config
          configMap:
            name: nats-config

  volumeClaimTemplates:
    - metadata:
        name: nats-storage
      spec:
        storageClassName: hostpath
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
